# MicrobitTempMonitor

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.elf  app.hex  debug
src/: clock.c  clock.h  devpins.h  hardware.h  macros.h  main.c  nRF52833.ld  nvmc.h  serial.c  serial.h  startup.c  temp_sensor.c  temp_sensor.h  temperature_monitor.c  temperature_monitor.h  utils.c  utils.h
